force-app/main/default/objects/Chainable_Link__c/Chainable_Link__c.object-meta.xml
<CustomObject>
    <label>Chainable Link</label>
    <nameField>
        <label>Job Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chainable Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>