force-app/main/default/objects/Chainable_Link__c/fields/Action_Data__c.field-meta.xml
<CustomField>
    <fullName>Action_Data__c</fullName>
    <description>Actions that were not completed.  Allows chain to be restarted after an error occurs</description>
    <inlineHelpText>Actions that were not completed.  Allows chain to be restarted after an error occurs</inlineHelpText>
    <label>Action_Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>