force-app/main/default/objects/Chainable_Link__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>The type of action that was executed by this chain</description>
    <inlineHelpText>The type of action that was executed by this chain</inlineHelpText>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>