force-app/main/default/objects/Chainable_Link__c/fields/Chainable_Job__c.field-meta.xml
<CustomField>
    <fullName>Chainable_Job__c</fullName>
    <label>Chainable Job</label>
    <referenceTo>Chainable_Job__c</referenceTo>
    <relationshipLabel>Chainable Links</relationshipLabel>
    <relationshipName>Chainable_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>