force-app/main/default/objects/Chainable_Link__c/fields/Continue_on_Exception__c.field-meta.xml
<CustomField>
    <fullName>Continue_on_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this link will continue execution on an exception</description>
    <inlineHelpText>Determines if this link will continue execution on an exception</inlineHelpText>
    <label>Continue on Exception</label>
    <type>Checkbox</type>
</CustomField>