force-app/main/default/objects/Chainable_Link__c/fields/Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Executed_Date__c</fullName>
    <description>The date the action was executed</description>
    <inlineHelpText>The date the action was executed</inlineHelpText>
    <label>Exceuted Date</label>
    <type>DateTime</type>
</CustomField>