force-app/main/default/objects/Chainable_Link__c/fields/Executions__c.field-meta.xml
<CustomField>
    <fullName>Executions__c</fullName>
    <label>Executions</label>
    <summaryForeignKey>Chainable_Link_Execution__c.Chainable_Link__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>