force-app/main/default/objects/Chainable_Link__c/fields/Immediate_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of times we have attempted to run this execution for the current chain process.  Reset if Chain is rerun.</description>
    <inlineHelpText>The number of times we have attempted to run this execution for the current chain process.  Reset if Chain is rerun.</inlineHelpText>
    <label>Immediate Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>