force-app/main/default/objects/Chainable_Link__c/fields/Immediate_Retries__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many times this link will immediately retry on failure.  Defaults to 0</description>
    <inlineHelpText>How many times this link will immediately retry on failure.  Defaults to 0</inlineHelpText>
    <label>Immediate Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>