force-app/main/default/objects/Chainable_Link__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>The key for this chain.  Must be unique!</description>
    <externalId>true</externalId>
    <inlineHelpText>The key for this chain.  Must be unique!</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>