force-app/main/default/objects/Chainable_Link__c/fields/Last_Execution__c.field-meta.xml
<CustomField>
    <fullName>Last_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Execution</label>
    <referenceTo>Chainable_Link_Execution__c</referenceTo>
    <relationshipLabel>Chainable Links</relationshipLabel>
    <relationshipName>Chainable_Links</relationshipName>
    <type>Lookup</type>
</CustomField>