force-app/main/default/objects/Chainable_Link__c/fields/Last_Link__c.field-meta.xml
<CustomField>
    <fullName>Last_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that there are no more links being processed</description>
    <inlineHelpText>Signifies that there are no more links being processed</inlineHelpText>
    <label>Last Link</label>
    <type>Checkbox</type>
</CustomField>