force-app/main/default/objects/Chainable_Link__c/fields/Link_Position__c.field-meta.xml
<CustomField>
    <fullName>Link_Position__c</fullName>
    <description>The position this link is in the chain. 0 based</description>
    <inlineHelpText>The position this link is in the chain. 0 based</inlineHelpText>
    <label>Link Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>