force-app/main/default/objects/Chainable_Link__c/fields/Postponed__c.field-meta.xml
<CustomField>
    <fullName>Postponed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the link cannot be executed due to no resource availability.  Will be picked up by the clean-up scheduable</description>
    <inlineHelpText>Checked when the link cannot be executed due to no resource availability.Will be picked up by the clean-up scheduable</inlineHelpText>
    <label>Postponed</label>
    <type>Checkbox</type>
</CustomField>