force-app/main/default/objects/Chainable_Link__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this linked executed.  Needed for rollups</description>
    <inlineHelpText>Was this linked executed.  Needed for rollups</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>