force-app/main/default/objects/Chainable_Link__c/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <description>The type of object (serialized) stored in the response</description>
    <inlineHelpText>The type of object (serialized) stored in the response</inlineHelpText>
    <label>Response Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>