force-app/main/default/objects/Chainable_Link__c/fields/Rollback_on_Exception__c.field-meta.xml
<CustomField>
    <fullName>Rollback_on_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if DML should be rolled back when an exception occurs during chain execution</description>
    <inlineHelpText>Determines if DML should be rolled back when an exception occurs during chain execution</inlineHelpText>
    <label>Rollback on Exception</label>
    <type>Checkbox</type>
</CustomField>