force-app/main/default/objects/Chainable_Link__c/fields/Skip_Processing__c.field-meta.xml
<CustomField>
    <fullName>Skip_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&#39;t process this row. Used for re-running failures</description>
    <inlineHelpText>Don&#39;t process this row. Used for re-running failures</inlineHelpText>
    <label>Skip Processing</label>
    <type>Checkbox</type>
</CustomField>