force-app/main/default/objects/Chainable_Link__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Last execution was successful. Set by workflow so it can be used in rollup</description>
    <inlineHelpText>Last execution was successful. Set by workflow so it can be used in rollup</inlineHelpText>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>